syntax = "proto3";

package astropaperpackage;

// The api service definition.
service Astropaper {
  rpc GetNewWallpaper (WallpaperRequest) returns (APIReply) {}
  rpc SetupWallpaper (SetupRequest) returns (APIReply) {}
}

message WallpaperRequest {
  int32 quantity = 1;
}

message SetupRequest {
  string wallpaper = 1;
}

message APIReply {
  string reply = 1;
}